--- a/postnet/abbish/package.json
+++ b/postnet/abbish/package.json
@@ -6,22 +6,18 @@
   "main": "",
   "scripts": {
     "clean": "rimraf dist/*",
-    "copy": "copyfiles -f ./src/index.html ./src/favicon.ico ./dist",
+    "copy": "copyfiles -f ./src/index.html ./dist",
     "dist": "npm run copy & webpack --env=dist",
     "lint": "eslint ./src",
-    "posttest": "npm run lint",
-    "release:major": "npm version major && npm publish && git push --follow-tags",
-    "release:minor": "npm version minor && npm publish && git push --follow-tags",
-    "release:patch": "npm version patch && npm publish && git push --follow-tags",
+    "pretest": "npm run lint",
     "serve": "node server.js --env=dev",
-    "serve:dist": "node server.js --env=dist",
     "start": "node server.js --env=dev",
     "test": "karma start",
     "test:watch": "karma start --autoWatch=true --singleRun=false"
   },
   "repository": "",
   "keywords": [],
-  "author": "Your name here",
+  "author": "aBBISh",
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.0.0",
@@ -65,6 +61,7 @@
   },
   "dependencies": {
     "core-js": "^2.0.0",
+    "lodash": "^4.13.1",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
