--- a/postnet/abbish/package.json
+++ b/postnet/abbish/package.json
@@ -30,6 +30,7 @@
     "chai": "^3.2.0",
     "copyfiles": "^0.2.1",
     "css-loader": "^0.23.0",
+    "enzyme": "^2.4.1",
     "eslint": "^2.2.0",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^5.0.0",
@@ -46,24 +47,25 @@
     "karma-webpack": "^1.7.0",
     "minimist": "^1.2.0",
     "mocha": "^2.2.5",
+    "node-sass": "^3.4.2",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.0.0",
     "react-addons-test-utils": "^15.0.0",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
+    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.12.0",
-    "sass-loader": "^3.1.2",
-    "node-sass": "^3.4.2"
+    "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
     "core-js": "^2.0.0",
     "lodash": "^4.13.1",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react-dom": "^15.0.0",
+    "react-router": "^2.6.0"
   }
 }
