--- a/postnet/abbish/package.json
+++ b/postnet/abbish/package.json
@@ -22,9 +22,9 @@
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.0.0",
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "bower-webpack-plugin": "^0.1.9",
     "chai": "^3.2.0",
@@ -37,6 +37,7 @@
     "file-loader": "^0.8.4",
     "glob": "^7.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
+    "json-loader": "^0.5.4",
     "karma": "^0.13.9",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.0.0",
@@ -50,17 +51,20 @@
     "node-sass": "^3.4.2",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
+    "phantomjs-polyfill-object-assign": "0.0.2",
     "phantomjs-prebuilt": "^2.0.0",
-    "react-addons-test-utils": "^15.0.0",
+    "react-addons-test-utils": "^15.2.1",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
     "sass-loader": "^3.1.2",
+    "sinon": "git+https://github.com/sinonjs/sinon.git",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "antd": "^1.6.5",
     "core-js": "^2.0.0",
     "lodash": "^4.13.1",
     "normalize.css": "^4.0.0",
